<resources>
    <string name="app_name">NewsReaderStudent636130</string>
    <!-- strings for log in/register -->
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="woLoginContinue">Continue reading\nnews without loging in</string>
    <string name="ifReg"><u>Dont have an account?\nRegister here!</u></string>
    <string name="ifLogin"><u>Already have an account?\nLog in here!</u></string>
    <string name="loginReg">Login to see \nyour favourite articles\n\nOR\n\nRegister if you havent already\nto save your favourite articles</string>

    <!-- strings for main activity -->
    <string name="newsFeed">News Feed</string>
    <string name="home">Home</string>
    <string name="savedArticles">Saved Articles</string>

    <!-- strings for article detail fragment -->
    <string name="detailTitle">Specific article detail</string>
    <string name="detailTitleWebView">Full article</string>
    <string name="date">published date</string>
    <string name="articleTitle">Title</string>
    <string name="articleSummary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="read">Read full article</string>
    <string name="emptyFaves">Nothing to see here :(\nSave some articles to begin</string>
</resources>