<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginRegister.loginView">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/design_default_color_primary_dark"
        android:text="@string/login">
    </TextView>
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp">

         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:id="@+id/eUsername"
             android:hint="@string/username">
         </com.google.android.material.textfield.TextInputEditText>


     </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp">
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:id="@+id/ePassword"
             android:hint="@string/Password">
         </com.google.android.material.textfield.TextInputEditText>


     </com.google.android.material.textfield.TextInputLayout>

     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
         android:text="@string/login"
         android:id="@+id/btnLogin"
         android:textColor="#FFF"
         android:background ="@color/design_default_color_primary_dark">

     </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:text="@string/ifReg"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20sp">

    </TextView>

    <Button
        android:id="@+id/btnbacktomain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:text="@string/woLoginContinue"
        android:textAlignment="center"
        android:textAllCaps="false" />


</LinearLayout>