<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewsActivities.DetailActivityView"
    >


    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/design_default_color_primary"
        android:elevation="4dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:padding="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/detailTitle"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="45dp"
            android:layout_height="42dp"
            android:layout_marginLeft="130dp"
            app:srcCompat="@drawable/backBtn"
            app:tint="@android:color/white"
            tools:ignore="MissingConstraints" />

    </Toolbar>


    <ImageView
        android:id="@+id/article_image"
        android:layout_width="match_parent"
        android:layout_height="261dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/backgrounds/scenic">

    </ImageView>

    <TextView
        android:id="@+id/article_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/articleTitle"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingLeft="30dp">

    </TextView>

    <TextView
        android:id="@+id/article_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:paddingLeft="30dp">

    </TextView>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="230dp"
        android:scrollbars="vertical"
        android:fillViewport="true"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="15dp"
        android:scrollbarStyle="insideOverlay">

        <TextView
            android:id="@+id/article_summary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:includeFontPadding="false"
            android:paddingBottom="2dp"
            android:text="@string/articleSummary"
            >

        </TextView>

    </ScrollView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/readmorebutton"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:backgroundTint="@color/design_default_color_primary"
            android:text="@string/read"
            android:textColor="#fff"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="573dp"
            android:layout_marginLeft="30dp">

        </Button>

        <ImageView
            android:id="@+id/ic_likebutton_filled"
            android:layout_width="45dp"
            android:layout_height="42dp"
            android:layout_marginLeft="60dp"
            app:srcCompat="@drawable/ic_likebutton_filled"
            app:tint="@android:color/darker_gray"
            tools:ignore="MissingConstraints" />
    </LinearLayout>


</LinearLayout>